@@ -7,7 +7,6 @@ import lombok.Setter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -16,7 +15,7 @@ public  class TransformedApiResponse {
     private List<AggregatedResourceBody> collection = new ArrayList<>();
     private ApiResponse originalResponse;
 
-    public List<Map<String, Object>> getCollection() {
-        return collection.stream().map(AggregatedResourceBody::toMap).collect(Collectors.toList());
+    public List<Map<String, Object>> getCollection(boolean showOriginalResponse) {
+        return collection.stream().map(x -> x.toMap(showOriginalResponse)).toList();
     }
 }
